// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - badge danger outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-danger"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge danger renders correctly 1`] = `
<jest>
  <span
    class="badge bg-danger"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge dark outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-dark"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge dark renders correctly 1`] = `
<jest>
  <span
    class="badge bg-dark"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge info outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-info"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge info renders correctly 1`] = `
<jest>
  <span
    class="badge bg-info"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge light outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-light"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge light renders correctly 1`] = `
<jest>
  <span
    class="badge bg-light"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge primary outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-primary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge primary renders correctly 1`] = `
<jest>
  <span
    class="badge bg-primary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge renders correctly as a rounded pill 1`] = `
<jest>
  <span
    class="badge rounded-pill bg-primary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge renders correctly dismissible 1`] = `
<jest>
  <span
    class="badge dismissible bg-primary"
  >
    A simple badge!
    <span
      aria-hidden="true"
      class="icon--close"
    >
      <svg
        class="bi icon--s"
      >
        <use
          xlink:href="#x-lg"
        />
      </svg>
    </span>
  </span>
</jest>
`;

exports[`OE - badge renders correctly with a link 1`] = `
<jest>
  <a
    class="text-decoration-none"
    href="http://example.com"
    title="A simple badge!"
  >
    <span
      class="badge bg-primary"
    >
      A simple badge!
    </span>
  </a>
</jest>
`;

exports[`OE - badge renders correctly with assistive text 1`] = `
<jest>
  <span
    class="badge bg-primary"
  >
    <span
      class="visually-hidden"
    >
      An assistive text
    </span>
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge secondary outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-secondary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge secondary renders correctly 1`] = `
<jest>
  <span
    class="badge bg-secondary"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge success outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-success"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge success renders correctly 1`] = `
<jest>
  <span
    class="badge bg-success"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge warning outline renders correctly 1`] = `
<jest>
  <span
    class="badge badge-outline-warning"
  >
    A simple badge!
  </span>
</jest>
`;

exports[`OE - badge warning renders correctly 1`] = `
<jest>
  <span
    class="badge bg-warning"
  >
    A simple badge!
  </span>
</jest>
`;
